fixed json again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.dredhorse5.dredPack",
+  "name": "com.dredhorse5.dredpack",
   "version": "1.2.3",
   "displayName": "Starter pack - DredPack ",
   "description": "Everything in this package will make your work with unity easier!",
