--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.dredhorse5.dredpack",
-  "version": "1.2.3",
-  "displayName": "Starter pack - DredPack ",
+  "version": "1.0.0",
+  "displayName": "DredPack ",
   "description": "Everything in this package will make your work with unity easier!",
   "unity": "2019.1",
   "author": {
