--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.dredhorse5.dredpack",
-  "version": "1.4.23",
+  "version": "Beta 2.0",
   "displayName": "DredPack",
   "description": "Everything in this package will make your work with unity easier!",
   "unity": "2019.1",
