--- a/Runtime/DredPack.asmdef
+++ b/Runtime/DredPack.asmdef
@@ -1,3 +1,14 @@
 {
-    "name": "DredPack"
+    "name": "DredPack",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
