--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "email": "dima.titov18@gmail.com",
     "url": ""
   },
-  "dependencies": {
+  "dependencies": 
+  {
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm"
   }
 }
